changed all contacts to users
