# routes/index.js
@@ -7,6 +7,6 @@ router.get('/', (req, res) => {
     res.send('Hello World');
 });
 
-router.use('/contacts', require('./contacts'));
+router.use('/users', require('./users'));
 
 module.exports = router;
